--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
-<h1>Revolutionary Net Art</h1>
-<h2>by Macsafawate</h2>
+<!DOCTYPE html>
+<html>
+  <html lang="cad en">
+    <head>
+       <meta charset="utf-8">
+      <!--Made by Alexandra Dillon on Oct 6-->
+      <title>GitHub Setup</title>
+    </head>
+    <body style="background-color:orchid;">
+      <img src="cat meme.jpeg"
+           alt="cat making a funny face">
+      <h1>Alexandra Dillon</h1>
+      <h2>GitHub Setup Complete!</h2>
+    </body>
+  </html>
+</html>
